<resources>
    <string name="app_name">Drawing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_myprofile">My Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_spen">SpenActivity</string>
    <string name="title_activity_spentests">SpenTests</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="enter_parcel_name">Parcel name</string>
    <string name="enter_tracking_id">Enter tracking ID</string>
    <string name="confirm">Add package</string>
    <string name="parcel1name">iphone</string>
    <string name="parcel2name">shampoo</string>
    <string name="parcel3name">note 8</string>
    <string name="parcel4name">coffey</string>
    <string name="parcel5name">water bottle</string>




    <string-array name="carrier">
        <item>USPS</item>
        <item>UPS</item>
        <item>FEDEX</item>
        <item>DHL</item>
        <item>ONPOST</item>
    </string-array>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="instructions">
        Place your fingertip on the Home button to verify your identity</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
