<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.samsung.shack.MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />
    <Button
        android:id="@+id/parcel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parcel1name"
        android:textSize="30sp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="visible"
        android:paddingBottom="20dp"/>
    <Space

    android:layout_width="match_parent"
    android:layout_height="20dp" />

    <Button
        android:id="@+id/parcel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parcel2name"
        android:textSize="30sp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="visible"
        android:paddingBottom="20dp"/>    <Space
    android:layout_width="match_parent"
    android:layout_height="20dp" />

    <Button
        android:id="@+id/parcel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parcel3name"
        android:textSize="30sp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="visible"
        android:paddingBottom="20dp"/>    <Space
    android:layout_width="match_parent"
    android:layout_height="20dp" />

    <Button
        android:id="@+id/parcel4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parcel4name"
        android:textSize="30sp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="visible"
        android:paddingBottom="20dp"/>    <Space
    android:layout_width="match_parent"
    android:layout_height="20dp" />

    <Button
        android:id="@+id/parcel5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/parcel5name"
        android:textSize="30sp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="visible"
        android:paddingBottom="20dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="340dp"
        android:clickable="true"
        app:elevation="5dp"
        app:srcCompat="@android:drawable/ic_menu_add" />

</LinearLayout>
